1.新增自定义配置页面 2.重构部分读取配置代码